
* Fix false positive ``dict-iter-missing-items`` for dictionaries only using tuples as keys

  Closes #3282

* The ``unspecified-encoding`` checker now also checks calls to ``pathlib.Path().read_text()``
  and ``pathlib.Path().write_text()``

  Closes #4945

* Fix false positive ``superfluous-parens`` for tuples created with inner tuples

  Closes #4907

* Extended ``consider-using-in`` check to work for attribute access.

* Setting ``min-similarity-lines`` to 0 now makes the similarty checker stop checking for duplicate code

  Closes #4901


What's New in Pylint 2.10.3?
============================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here

* The ``invalid-name`` message is now more detailed when using multiple naming style regexes.


What's New in Pylint 2.10.2?
============================
Release date: 2021-08-21

* We now use platformdirs instead of appdirs since the latter is not maintained.

  Closes #4886

* Fix a crash in the checker raising ``shallow-copy-environ`` when failing to infer
  on ``copy.copy``

  Closes #4891



What's New in Pylint 2.10.1?
============================
Release date: 2021-08-20

* pylint does not crash when PYLINT_HOME does not exist.

  Closes #4883


What's New in Pylint 2.10.0?
============================
Release date: 2021-08-20

* pyreverse: add option to produce colored output.

  Closes #4488

* pyreverse: add output in PlantUML format.

  Closes #4498

* ``consider-using-with`` is no longer triggered if a context manager is returned from a function.

  Closes #4748

* pylint does not crash with a traceback anymore when a file is problematic. It
  creates a template text file for opening an issue on the bug tracker instead.
  The linting can go on for other non problematic files instead of being impossible.

* pyreverse: Show class has-a relationships inferred from the type-hint

  Closes #4744
