@@ -63,6 +63,10 @@ Release date: TBA
 
   Closes #4907
 
+* Fix false positive ``unused-private-member`` for private staticmethods accessed in classmethods.
+
+  Closes #4849
+
 * Extended ``consider-using-in`` check to work for attribute access.
 
 * Setting ``min-similarity-lines`` to 0 now makes the similarty checker stop checking for duplicate code
